<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_host"
        android:inputType="textCapWords"
        android:key="host"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_host" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_control_port"
        android:inputType="textCapWords"
        android:key="control_port"
        android:numeric="integer"
        android:maxLength="5"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_control_port" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_camera_port"
        android:inputType="textCapWords"
        android:key="camera_port"
        android:numeric="integer"
        android:maxLength="5"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_camera_port" />

</PreferenceScreen>
